# haskell-tetris

./: .gitignore  LICENSE  README.md  htetris.cabal  stack.yaml  tetris.cabal  tetris.txt
src/: Main.hs  Tetris.hs  TetrisCurses.hs
src/TetrisGame/: Logic.hs
src/TetrisUI/: Grid.hs
